# less-power-examples

./: .gitignore  LICENSE  README.md  dump-test-reports.sh  dune
assignment/: dune
examples/: .gitignore
examples/00-basics/: README.md
examples/00-basics/solution/src/: assignment.ml
examples/00-basics/tests/: run.sh
examples/00-basics/tests/assignment/: dune
examples/00-basics/tests/overrides/: dune
examples/00-basics/tests/runner/: runner.ml
examples/00-basics/tests/solution/: dune
examples/00-basics/tests/test/: config.ml  dune  process_results.ml  test.ml
examples/01-partial-type-correct/: README.md
examples/01-partial-type-correct/solution/src/: assignment.ml
examples/01-partial-type-correct/template/src/: assignment.ml  assignment.mli
examples/01-partial-type-correct/tests/: .gitignore  run.sh
examples/01-partial-type-correct/tests/overrides/: overrides.ml
examples/01-partial-type-correct/tests/probe/: dune  probe_common.ml  probe_defs.ml
examples/01-partial-type-correct/tests/runner/: runner.ml
examples/01-partial-type-correct/tests/solution/: dune
examples/01-partial-type-correct/tests/test/: dune  process_results.ml  scaffold.ml  test.ml
runner/: dune
solution/: dune
src/: assignment.ml
test/: test.ml
